fix up the internals, add more type safety, deprecate